# Yilanoyunu

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
oyun/: admin.py  models.py  urls.py  views.py
oyun/management/commands/: create_admin.py
oyun/migrations/: 0001_initial.py  0002_player_password.py  0003_player_avatar.py
oyun/templates/oyun/: index.html
projem/: asgi.py  settings.py  urls.py  wsgi.py
